tests/NormalTests/paczka1/fuzzy1/77335748.err
Error in line 2: cRC S719 155,42
Error in line 1: cRC S719 69,9
Error in line 4: FBetcsdR A809 54,7
Error in line 13: A332 A809 27,6
Error in line 10: a65 A922 33,2
Error in line 9: FBetcsdR A809 6,5
Error in line 21: 4P5UNJz7wcI A809 78,7
Error in line 34: a65 A922 18,0
